--- a/pacific.css
+++ b/pacific.css
@@ -111,7 +111,7 @@ main{
     background-size: 100% 100%;
     background-repeat: no-repeat;
     height: 300px;
-    background-image: url(coast2.jpg)
+    background-image: url(coast.jpg)
 }
 #yurthero{
     margin-left: 190px;
